--- a/sys/package.json
+++ b/sys/package.json
@@ -26,6 +26,7 @@
     "gulp-sourcemaps": "^1.2.8",
     "gulp-uglify": "^1.0.1",
     "gulp-util": "^3.0.1",
+    "jsdoc": "^3.3.0-alpha11",
     "jshint-stylish": "^1.0.0",
     "karma": "^0.12.24",
     "karma-chrome-launcher": "^0.1.5",
