--- a/sys/bower.json
+++ b/sys/bower.json
@@ -32,9 +32,14 @@
     "ng-sortable": "1.1.1",
     "angular-mocks": "~1.x",
     "angular-http-auth": "git://github.com/witoldsz/angular-http-auth.git#~1.x",
-    "angular-bootstrap-show-errors": "~2.x"
+    "angular-bootstrap-show-errors": "~2.x",
+    "angular-schema-form": "~0.7.6",
+    "angular-sanitize": "~1.3.7",
+    "tv4": "~1.1.4",
+    "objectpath": "~1.0.4"
   },
   "resolutions": {
-    "angular": "~1.3.x"
+    "angular": "~1.3.x",
+    "tv4": "~1.1.4"
   }
 }
