--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "gulp-notify": "^2.0.1",
     "gulp-pixrem": "^0.1.1",
     "gulp-plumber": "^0.6.6",
+    "gulp-protractor": "0.0.12",
     "gulp-sourcemaps": "^1.2.8",
     "gulp-uglify": "^1.0.1",
     "gulp-util": "^3.0.1",
-    "jshint-stylish": "^1.0.0"
+    "jshint-stylish": "^1.0.0",
+    "protractor": "^1.6.1"
   }
 }
