- CHANGED: E2E tests startsuite (nothing to test yet)
git-svn-id: file:///Users/jan/Dropbox/svn/FlexyAdmin/trunk@2840 0c02b2c5-a8bd-4e35-85b2-cf8cacb96951

Former-commit-id: 0a7de6a90d85d493fcde2df4bcdf2c0d1dbf9d4a
Former-commit-id: cc32ec3e30901a314ba8ec0db1ded58468acba7f
Former-commit-id: eebfb0a255d55d1013d8ad7a2a41d03111db2222

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "gulp": "^3.8.10",
     "gulp-autoprefixer": "^2.0.0",
+    "gulp-casperjs": "0.0.5",
     "gulp-concat": "^2.4.2",
     "gulp-flatten": "0.0.4",
     "gulp-jshint": "^1.9.0",
@@ -20,11 +21,9 @@
     "gulp-notify": "^2.0.1",
     "gulp-pixrem": "^0.1.1",
     "gulp-plumber": "^0.6.6",
-    "gulp-protractor": "0.0.12",
     "gulp-sourcemaps": "^1.2.8",
     "gulp-uglify": "^1.0.1",
     "gulp-util": "^3.0.1",
-    "jshint-stylish": "^1.0.0",
-    "protractor": "^1.6.1"
+    "jshint-stylish": "^1.0.0"
   }
 }
