--- a/sys/package.json
+++ b/sys/package.json
@@ -32,6 +32,7 @@
     "karma-chrome-launcher": "^0.1.5",
     "karma-firefox-launcher": "^0.1.3",
     "karma-jasmine": "^0.1.5",
+    "karma-notify-reporter": "^0.1.1",
     "karma-safari-launcher": "^0.1.1"
   },
   "scripts": {
