- NEW: Replaced tinyMCE with Froala editor - NEW: added fontawsome
git-svn-id: file:///Users/jan/Dropbox/svn/FlexyAdmin/trunk@2962 0c02b2c5-a8bd-4e35-85b2-cf8cacb96951

Former-commit-id: dc39f35e535e44d4a3b6563f8e7cd451c6b7d737
Former-commit-id: 7e6f4fc1cf3faa8e88f2e43f6237a022eb1c0727
Former-commit-id: 6488e96cbc1979cf47d97c352066126b3f3cc358

--- a/sys/bower.json
+++ b/sys/bower.json
@@ -37,8 +37,9 @@
     "angular-sanitize": "~1.3.7",
     "tv4": "~1.1.4",
     "objectpath": "~1.0.4",
-    "angular-schema-form-tinymce": "~0.1.0",
-    "tinymce": "~4.1.7"
+    "angular-froala":"https://github.com/froala/angular-froala.git",
+    "FroalaWysiwygEditor":"https://github.com/froala/wysiwyg-editor.git",
+    "components-font-awesome": "~4.2.0"
   },
   "resolutions": {
     "angular": "~1.3.x",
