--- a/sys/bower.json
+++ b/sys/bower.json
@@ -37,9 +37,10 @@
     "angular-sanitize": "~1.3.7",
     "tv4": "~1.1.4",
     "objectpath": "~1.0.4",
-    "angular-froala":"https://github.com/froala/angular-froala.git",
-    "FroalaWysiwygEditor":"https://github.com/froala/wysiwyg-editor.git",
-    "components-font-awesome": "~4.2.0"
+    "angular-froala": "https://github.com/froala/angular-froala.git",
+    "FroalaWysiwygEditor": "https://github.com/froala/wysiwyg-editor.git",
+    "components-font-awesome": "~4.2.0",
+    "angular-file-upload": "~1.1.5"
   },
   "resolutions": {
     "angular": "~1.3.x",
