--- a/sys/bower.json
+++ b/sys/bower.json
@@ -27,9 +27,9 @@
     "angular-route": "~1.x",
     "angular-bootstrap": "~0.x",
     "angular-loading-bar": "~0.x",
-    "angular-smart-table": "~1.x",
+    "angular-smart-table": "~2.x",
     "angular-toArrayFilter": "~1.x",
-    "ng-sortable": "1.1.1",
+    "ng-sortable": "1.x",
     "angular-mocks": "~1.x",
     "angular-http-auth": "git://github.com/witoldsz/angular-http-auth.git#~1.x",
     "angular-bootstrap-show-errors": "~2.x",
@@ -43,7 +43,7 @@
     "angular-file-upload": "~1.1.5"
   },
   "resolutions": {
-    "angular": "~1.3.x",
+    "angular": "1.3.x",
     "tv4": "~1.1.4",
     "objectpath": "~1.1.0"
   }
