- USERGUIDE: Create it with Doxygen
git-svn-id: file:///Users/jan/Dropbox/svn/FlexyAdmin/trunk@3108 0c02b2c5-a8bd-4e35-85b2-cf8cacb96951

Former-commit-id: 095f595f38963538487495ff28696f7217c1354d
Former-commit-id: ae51e5d352672f1a89028dbd19d60fc214d644fc
Former-commit-id: ca2e3f3ed4d91fe0d5f296b3d00b03bf1ed45280

--- a/doxygen.cfg
+++ b/doxygen.cfg
@@ -3,31 +3,38 @@
 PROJECT_NAME          = FlexyAdmin
 OUTPUT_DIRECTORY      = userguide/FlexyAdminDox
 CREATE_SUBDIRS        = YES
-WARNINGS              = YES
-BRIEF_MEMBER_DESC     = NO
+QUIET                 = YES
+WARNINGS              = NO
+WARN_IF_UNDOCUMENTED  = NO
+WARN_IF_DOC_ERROR     = YES
+BRIEF_MEMBER_DESC     = YES
 TAB_SIZE              = 4
+OUTPUT_LANGUAGE       = Dutch
 OPTIMIZE_OUTPUT_FOR_C = YES
 
-INPUT            = site sys userguide/FlexyAdmin/__doc
-RECURSIVE        = YES
-EXCLUDE_PATTERNS = _* __* *test* ciunit* Jsmin*
-EXCLUDE          = site/assets site/cache site/stats sys/jquery sys/tinymce sys/codeigniter sys/node_modules sys/bower_components sys/__test
-FILE_PATTERNS    = *.php *.md
+INPUT                  = site sys userguide/FlexyAdmin/__doc/
+USE_MDFILE_AS_MAINPAGE = userguide/FlexyAdmin/__doc/mainpage.dox
+RECURSIVE              = YES
+EXCLUDE_PATTERNS       = _* __* *test* ciunit* Jsmin*
+EXCLUDE                = site/assets site/cache site/stats sys/jquery sys/tinymce sys/codeigniter sys/node_modules sys/bower_components sys/__test
+FILE_PATTERNS          = *.php *.md *.dox
 
+DISABLE_INDEX          = NO
+GENERATE_TREEVIEW      = YES
+SHOW_NAMESPACES        = NO  
 SOURCE_BROWSER         = YES
 STRIP_CODE_COMMENTS    = NO
-REFERENCED_BY_RELATION = YES
+REFERENCED_BY_RELATION = NO
 REFERENCES_RELATION    = YES
 
-GENERATE_HTML           = YES
-GENERATE_TREEVIEW       = NO
-HTML_INDEX_NUM_ENTRIES  = 5
-HTML_TIMESTAMP          = NO
-# HTML_DYNAMIC_SECTIONS   = YES
-# HTML_HEADER           = userguide/FlexyAdminDox/html/header.html
-# HTML_FOOTER           = userguide/FlexyAdminDox/html/footer.html
-# HTML_EXTRA_STYLESHEET = userguide/FlexyAdminDox/html/customdoxygen.css
+HTML_INDEX_NUM_ENTRIES = 7
+HTML_TIMESTAMP         = NO
+#HTML_DYNAMIC_SECTIONS = YES
+#HTML_HEADER           = userguide/FlexyAdminDox/html/header.html
+#HTML_FOOTER           = userguide/FlexyAdminDox/html/footer.html
+#HTML_EXTRA_STYLESHEET = userguide/FlexyAdminDox/html/customdoxygen.css
 
+GENERATE_HTML   = YES
 GENERATE_DOCSET = YES
 GENERATE_LATEX  = NO
 
