--- a/doxygen.cfg
+++ b/doxygen.cfg
@@ -1,26 +1,37 @@
 # run doxygen doxygen.cfg
 
 PROJECT_NAME          = FlexyAdmin
+PROJECT_NUMBER        = 3089
 OUTPUT_DIRECTORY      = userguide/FlexyAdminDox
 CREATE_SUBDIRS        = YES
 QUIET                 = YES
 WARNINGS              = NO
 WARN_IF_UNDOCUMENTED  = NO
-WARN_IF_DOC_ERROR     = YES
+WARN_IF_DOC_ERROR     = NO
 BRIEF_MEMBER_DESC     = YES
 TAB_SIZE              = 4
 OUTPUT_LANGUAGE       = Dutch
 OPTIMIZE_OUTPUT_FOR_C = YES
 
-INPUT                  = site sys userguide/FlexyAdmin/__doc/
-USE_MDFILE_AS_MAINPAGE = userguide/FlexyAdmin/__doc/mainpage.dox
-RECURSIVE              = YES
-EXCLUDE_PATTERNS       = _* __* *test* ciunit* Jsmin*
-EXCLUDE                = site/assets site/cache site/stats sys/jquery sys/tinymce sys/codeigniter sys/node_modules sys/bower_components sys/__test
-FILE_PATTERNS          = *.php *.md *.dox
+INPUT                  = site
+INPUT                 += sys
+INPUT                 += userguide/FlexyAdmin/__doc/
+EXCLUDE               += site/assets
+EXCLUDE               += site/cache
+EXCLUDE               += site/stats
+EXCLUDE               += sys/jquery
+EXCLUDE               += sys/tinymce
+EXCLUDE               += sys/codeigniter
+EXCLUDE               += sys/node_modules
+EXCLUDE               += sys/bower_components
+EXCLUDE               += sys/__test
+FILE_PATTERNS          =  *.php *.dox
+EXCLUDE_PATTERNS       =  _* __* *test* ciunit* Jsmin*
+USE_MDFILE_AS_MAINPAGE =  userguide/FlexyAdmin/__doc/mainpage.dox
+RECURSIVE              =  YES
 
 DISABLE_INDEX          = NO
-GENERATE_TREEVIEW      = YES
+GENERATE_TREEVIEW      = NO
 SHOW_NAMESPACES        = NO  
 SOURCE_BROWSER         = YES
 STRIP_CODE_COMMENTS    = NO
@@ -30,9 +41,9 @@ REFERENCES_RELATION    = YES
 HTML_INDEX_NUM_ENTRIES = 7
 HTML_TIMESTAMP         = NO
 #HTML_DYNAMIC_SECTIONS = YES
-#HTML_HEADER           = userguide/FlexyAdminDox/html/header.html
-#HTML_FOOTER           = userguide/FlexyAdminDox/html/footer.html
-#HTML_EXTRA_STYLESHEET = userguide/FlexyAdminDox/html/customdoxygen.css
+HTML_HEADER            = userguide/FlexyAdminDox/html/assets/header.html
+HTML_FOOTER            = userguide/FlexyAdminDox/html/assets/footer.html
+HTML_EXTRA_STYLESHEET  = userguide/FlexyAdminDox/html/assets/css/customdoxygen.css
 
 GENERATE_HTML   = YES
 GENERATE_DOCSET = YES
