- USERGUIDE: DoxyGen - REMOVED: js/rem.min.js // not needed with Gulp
git-svn-id: file:///Users/jan/Dropbox/svn/FlexyAdmin/trunk@3111 0c02b2c5-a8bd-4e35-85b2-cf8cacb96951

Former-commit-id: 9fa98cdeebb78ed32ca22bd079b1b763e3006d89
Former-commit-id: 39213a9ba32e32f33857dcc9dac784e47a6add3d
Former-commit-id: 1411cc544db1d32bb563f535902ec63ddb29e321

--- a/doxygen.cfg
+++ b/doxygen.cfg
@@ -27,7 +27,7 @@ EXCLUDE               += sys/bower_components
 EXCLUDE               += sys/__test
 FILE_PATTERNS          =  *.php *.dox
 EXCLUDE_PATTERNS       =  _* __* *test* ciunit* Jsmin*
-USE_MDFILE_AS_MAINPAGE =  userguide/FlexyAdmin/__doc/mainpage.dox
+#USE_MDFILE_AS_MAINPAGE =  userguide/FlexyAdmin/__doc/mainpage.dox
 RECURSIVE              =  YES
 
 DISABLE_INDEX          = NO
@@ -37,6 +37,7 @@ SOURCE_BROWSER         = YES
 STRIP_CODE_COMMENTS    = NO
 REFERENCED_BY_RELATION = NO
 REFERENCES_RELATION    = YES
+COLS_IN_ALPHA_INDEX    = 3
 
 HTML_INDEX_NUM_ENTRIES = 7
 HTML_TIMESTAMP         = NO
@@ -44,8 +45,10 @@ HTML_TIMESTAMP         = NO
 HTML_HEADER            = userguide/FlexyAdminDox/html/assets/header.html
 HTML_FOOTER            = userguide/FlexyAdminDox/html/assets/footer.html
 HTML_EXTRA_STYLESHEET  = userguide/FlexyAdminDox/html/assets/css/customdoxygen.css
+LAYOUT_FILE            = userguide/FlexyAdminDox/html/assets/DoxygenLayout.xml
 
 GENERATE_HTML   = YES
 GENERATE_DOCSET = YES
+GENERATE_XML    = NO
 GENERATE_LATEX  = NO
 
