--- a/doxygen.cfg
+++ b/doxygen.cfg
@@ -12,6 +12,7 @@ BRIEF_MEMBER_DESC     = YES
 TAB_SIZE              = 4
 OUTPUT_LANGUAGE       = Dutch
 OPTIMIZE_OUTPUT_FOR_C = YES
+JAVADOC_AUTOBRIEF     = YES
 
 INPUT                  = site
 INPUT                 += sys
@@ -35,13 +36,20 @@ GENERATE_TREEVIEW      = NO
 SHOW_NAMESPACES        = NO  
 SOURCE_BROWSER         = YES
 STRIP_CODE_COMMENTS    = NO
-REFERENCED_BY_RELATION = NO
+REFERENCED_BY_RELATION = YES
 REFERENCES_RELATION    = YES
 COLS_IN_ALPHA_INDEX    = 3
+HAVE_DOT               = YES
+CLASS_DIAGRAMS         = YES
+CLASS_GRAPH            = YES
+COLLABORATION_GRAPH    = NO
+GROUP_GRAPHS           = YES
+SHOW_USED_FILES        = YES
+
 
 HTML_INDEX_NUM_ENTRIES = 7
 HTML_TIMESTAMP         = NO
-#HTML_DYNAMIC_SECTIONS = YES
+HTML_DYNAMIC_SECTIONS  = NO
 HTML_HEADER            = userguide/FlexyAdminDox/html/assets/header.html
 HTML_FOOTER            = userguide/FlexyAdminDox/html/assets/footer.html
 HTML_EXTRA_STYLESHEET  = userguide/FlexyAdminDox/html/assets/css/customdoxygen.css
