- BUG: 100% HTML5 validation on demo site
git-svn-id: file:///Users/jan/Dropbox/svn/FlexyAdmin/trunk@3160 0c02b2c5-a8bd-4e35-85b2-cf8cacb96951

Former-commit-id: d02e1a4aaba51d65d119ed1118ffc19f02e4f8b2
Former-commit-id: 61f880959d7ced1b2cd3db29e06f3dc1984eb3bb
Former-commit-id: bb6490221eae7aa63d1b2777e6acaecddd9a50e6

--- a/.htaccess
+++ b/.htaccess
@@ -3,6 +3,14 @@ RewriteEngine on
 RewriteCond $1 !^(index\.php|site/assets|sys/flexyadmin/assets|sys/tinymce|sys/jquery|sitemap\.xml|robots\.txt|sys/__test)
 RewriteRule ^(.*)$ index.php/$1 [L]
 
+# Tell IE to use latest engine
+<FilesMatch "\.(htm|html|php)$">
+  <IfModule mod_headers.c>
+    BrowserMatch MSIE ie
+    Header set X-UA-Compatible "IE=Edge,chrome=1" env=ie
+  </IfModule>
+</FilesMatch>
+
 # gzip site method 1: (test on http://www.feedthebot.com/tools/gzip/)
 # <ifModule mod_gzip.c>
 # mod_gzip_on Yes
