- TESTS: Check speed of tests - TESTS: select demo database when testing
git-svn-id: file:///Users/jan/Dropbox/svn/FlexyAdmin/trunk@3195 0c02b2c5-a8bd-4e35-85b2-cf8cacb96951

Former-commit-id: c4eeeb27481bf5dd06a279353dc3adf9d8fa258e
Former-commit-id: 2aa3dc2e83f84961f62952e82fcf000dbba02e7b
Former-commit-id: 22ac9f4677c20776984134d356c852d0861b4ebe

--- a/composer.json
+++ b/composer.json
@@ -2,5 +2,8 @@
     "require": {
       "codeigniter/framework": "dev-master",
       "mikey179/vfsStream": "1.5.*@dev"
+    },
+    "require-dev": {
+        "johnkary/phpunit-speedtrap": "~1.0@dev"
     }
 }
