--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Jan den Besten",
   "license": "n/a",
   "repository": "svn",
+  "preferGlobal": true,
   "dependencies": {
     "bower": "^1.3.12"
   },
@@ -18,6 +19,7 @@
     "gulp-livereload": "^2.1.1",
     "gulp-minify-css": "^0.3.11",
     "gulp-notify": "^2.0.1",
+    "gulp-phpunit": "^0.8.1",
     "gulp-pixrem": "^0.1.1",
     "gulp-plumber": "^0.6.6",
     "gulp-sourcemaps": "^1.2.8",
