- NEW: npm / bower update to latest Angular 1.4.4 (and other external updates)
git-svn-id: file:///Users/jan/Dropbox/svn/FlexyAdmin/trunk@3283 0c02b2c5-a8bd-4e35-85b2-cf8cacb96951

Former-commit-id: a80d38ae0a1d094a0901f47136c34b5af13a8ca5
Former-commit-id: 233b37426ba81a9cd28726562464f7b86a872420
Former-commit-id: 15b9ba079d4912bf801849780a644708093f6c92 [formerly c8b863f4669d4f2637ebdc747735c3a03fdaa918]
Former-commit-id: 54911cdffb2b0ac10e772e04bc49f4dee1d5f73c

--- a/sys/bower.json
+++ b/sys/bower.json
@@ -23,28 +23,27 @@
   ],
   "dependencies": {
     "bootstrap": "~3.x",
-    "angular": "~1.3.x",
-    "angular-route": "~1.x",
+    "angular": "~1.4.x",
+    "angular-route": "~1.4.x",
     "angular-bootstrap": "~0.x",
     "angular-loading-bar": "~0.x",
     "angular-smart-table": "~2.x",
     "angular-toArrayFilter": "~1.x",
-    "ng-sortable": "1.x",
-    "angular-mocks": "~1.x",
+    "ng-sortable": "1.3.x",
+    "angular-mocks": "~1.4.x",
     "angular-http-auth": "git://github.com/witoldsz/angular-http-auth.git#~1.x",
     "angular-bootstrap-show-errors": "~2.x",
-    "angular-schema-form": "~0.7.6",
-    "angular-sanitize": "~1.3.7",
-    "tv4": "~1.1.4",
-    "objectpath": "~1.0.4",
+    "angular-schema-form": "~0.x",
+    "angular-sanitize": "~1.4.x",
+    "tv4": "~1.1.x",
+    "objectpath": "~1.x",
     "angular-froala": "https://github.com/froala/angular-froala.git",
     "FroalaWysiwygEditor": "https://github.com/froala/wysiwyg-editor.git",
-    "components-font-awesome": "~4.2.0",
-    "angular-file-upload": "~1.1.5"
+    "components-font-awesome": "~4.2.x",
+    "angular-file-upload": "~1.1.x"
   },
   "resolutions": {
-    "angular": "1.3.x",
-    "tv4": "~1.1.4",
-    "objectpath": "~1.1.0"
+    "angular": "~1.4.x",
+    "tv4": "~1.1.x"
   }
 }
