--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "gulp": "^3.8.10",
     "gulp-autoprefixer": "^2.0.0",
+    "gulp-cached": "^1.1.0",
     "gulp-concat": "^2.4.2",
     "gulp-flatten": "0.0.4",
     "gulp-jshint": "^1.9.0",
@@ -22,6 +23,7 @@
     "gulp-phpunit": "^0.8.1",
     "gulp-pixrem": "^0.1.1",
     "gulp-plumber": "^0.6.6",
+    "gulp-remember": "^0.3.0",
     "gulp-sourcemaps": "^1.2.8",
     "gulp-uglify": "^1.0.1",
     "gulp-util": "^3.0.1",
