--- a/package.json
+++ b/package.json
@@ -1,32 +1,33 @@
 {
   "name": "FlexyAdmin",
-  "version": "2.6.0",
+  "version": "3.0.1",
   "description": "Flexible & Userfriendly CMS",
   "author": "Jan den Besten",
-  "license": "n/a",
+  "license": "UNLICENSED",
+  "private": true,
   "repository": "svn",
   "preferGlobal": true,
   "dependencies": {
-    "bower": "^1.3.12"
+    "bower": "^1.3"
   },
   "devDependencies": {
-    "gulp": "^3.8.10",
-    "gulp-autoprefixer": "^2.0.0",
-    "gulp-cached": "^1.1.0",
-    "gulp-concat": "^2.4.2",
-    "gulp-flatten": "0.0.4",
-    "gulp-jshint": "^1.9.0",
-    "gulp-less": "^1.3.6",
-    "gulp-livereload": "^2.1.1",
-    "gulp-minify-css": "^0.3.11",
-    "gulp-notify": "^2.0.1",
-    "gulp-phpunit": "^0.8.1",
-    "gulp-pixrem": "^0.1.1",
-    "gulp-plumber": "^0.6.6",
-    "gulp-remember": "^0.3.0",
-    "gulp-sourcemaps": "^1.2.8",
-    "gulp-uglify": "^1.0.1",
-    "gulp-util": "^3.0.1",
-    "jshint-stylish": "^1.0.0"
+    "gulp": "^3.8",
+    "gulp-autoprefixer": "^2.0",
+    "gulp-cached": "^1.1",
+    "gulp-concat": "^2.4",
+    "gulp-flatten": "^0.0",
+    "gulp-jshint": "^1.9",
+    "gulp-less": "^1.3",
+    "gulp-livereload": "^2.1",
+    "gulp-minify-css": "^0.3",
+    "gulp-notify": "^2.0",
+    "gulp-phpunit": "^0.8",
+    "gulp-pixrem": "^0.1",
+    "gulp-plumber": "^0.6",
+    "gulp-remember": "^0.3",
+    "gulp-sourcemaps": "^1.2",
+    "gulp-uglify": "^1.0",
+    "gulp-util": "^3.0",
+    "jshint-stylish": "^1.0"
   }
 }
