- NEW: added translate service - NEW: added alert service - NEW: added dialig service - NEW: grid DELETE works now (with dialog / alert / translation)
git-svn-id: file:///Users/jan/Dropbox/svn/FlexyAdmin/trunk@3430 0c02b2c5-a8bd-4e35-85b2-cf8cacb96951

Former-commit-id: 7687f291750480910027949c2cfafc66dbda2d34
Former-commit-id: c6770ee014e607608ffe9fe5ac6d7bf7da29d5ce
Former-commit-id: f6a73d69438a109586b46d0025d0203945b5b5db [formerly 401f6d905ddf52bb0558a22da4cea119e15c8caa]
Former-commit-id: 66cc02accf6ee4887c10f96b45aecb3726e9b9f8

--- a/sys/bower.json
+++ b/sys/bower.json
@@ -22,25 +22,27 @@
     "tests"
   ],
   "dependencies": {
-    "bootstrap": "~3.x",
     "angular": "~1.4.x",
-    "angular-route": "~1.4.x",
     "angular-bootstrap": "~0.x",
+    "angular-bootstrap-show-errors": "~2.x",
+    "angular-dialog-service": "~5.2.8",
+    "angular-file-upload": "~1.1.x",
+    "angular-froala": "https://github.com/froala/angular-froala.git",
+    "angular-http-auth": "git://github.com/witoldsz/angular-http-auth.git#~1.x",
     "angular-loading-bar": "~0.x",
+    "angular-mocks": "~1.4.x",
+    "angular-route": "~1.4.x",
+    "angular-sanitize": "~1.4.x",
+    "angular-schema-form": "~0.x",
     "angular-smart-table": "~2.x",
     "angular-toArrayFilter": "~1.x",
-    "ng-sortable": "1.3.x",
-    "angular-mocks": "~1.4.x",
-    "angular-http-auth": "git://github.com/witoldsz/angular-http-auth.git#~1.x",
-    "angular-bootstrap-show-errors": "~2.x",
-    "angular-schema-form": "~0.x",
-    "angular-sanitize": "~1.4.x",
-    "tv4": "~1.1.x",
-    "objectpath": "~1.x",
-    "angular-froala": "https://github.com/froala/angular-froala.git",
-    "FroalaWysiwygEditor": "https://github.com/froala/wysiwyg-editor.git",
+    "bootstrap": "~3.x",
     "components-font-awesome": "~4.2.x",
-    "angular-file-upload": "~1.1.x"
+    "FroalaWysiwygEditor": "https://github.com/froala/wysiwyg-editor.git",
+    "ng-sortable": "1.3.x",
+    "objectpath": "~1.x",
+    "tv4": "~1.1.x",
+    "angular-translate": "~2.8.1"
   },
   "resolutions": {
     "angular": "~1.4.x",
