--- a/package.json
+++ b/package.json
@@ -8,18 +8,18 @@
   "repository": "svn",
   "preferGlobal": true,
   "dependencies": {
-    "bower": "^1.3"
+    "bower": "^1.3",
+    "lodash": "^4.3.0"
   },
   "devDependencies": {
     "gulp": "^3.8",
-    "gulp-autoprefixer": "^2.0",
     "gulp-cached": "^1.1",
     "gulp-concat": "^2.4",
+    "gulp-cssnano": "^2.1.0",
     "gulp-flatten": "^0.0",
     "gulp-jshint": "^1.9",
     "gulp-less": "^1.3",
     "gulp-livereload": "^2.1",
-    "gulp-minify-css": "^0.3",
     "gulp-notify": "^2.0",
     "gulp-phpunit": "^0.8",
     "gulp-pixrem": "^0.1",
