- Data_model->get_grid geeft txt velden volledig - NEW: flexy_grid txt velden worden getoond zonder html - NEW: angular_filter toegevoegd
git-svn-id: file:///Users/jan/Dropbox/svn/FlexyAdmin/trunk@3565 0c02b2c5-a8bd-4e35-85b2-cf8cacb96951

Former-commit-id: 8690f914291b2bb4b827e87d50107903b3ba9005
Former-commit-id: f0f67200617bbd3252135b6b2b2dd70866228b2e
Former-commit-id: dd1f093daef067d4396586de7f5b845cde37355c [formerly 73f0eaae63bda87cb9557144ea6bc85099ef1793]
Former-commit-id: 6e1a3894582bdc0482634f7abc54eb86b6bdac4d

--- a/sys/bower.json
+++ b/sys/bower.json
@@ -42,7 +42,8 @@
     "ng-sortable": "1.3.x",
     "objectpath": "~1.x",
     "tv4": "~1.1.x",
-    "angular-translate": "~2.8.1"
+    "angular-translate": "~2.8.1",
+    "angular-filter": "^0.5.8"
   },
   "resolutions": {
     "angular": "~1.4.x",
