--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 bower_components/*
 node_modules/*
+sys/bower_components/*
+sys/node_modules/*
 site/cache/log*.php
 site/stats/*.xml
 site/cache/data_settings_*
