--- a/sys/package.json
+++ b/sys/package.json
@@ -1,6 +1,6 @@
 {
   "name": "FlexyAdminDEMO",
-  "version": "3.3.0",
+  "version": "3.5.0alpha",
   "description": "== FLEXYADMIN == (c) Jan den Besten www.flexyadmin.com",
   "private": true,
   "main": "index.php",
