--- a/sys/package.json
+++ b/sys/package.json
@@ -7,8 +7,19 @@
   "devDependencies": {
     "bower": "^1.x",
     "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-flatten": "^0.3.1",
+    "gulp-jshint": "^2.0.2",
+    "gulp-livereload": "^3.8.1",
     "gulp-notify": "^2.2.0",
-    "gulp-util": "^3.0.7"
+    "gulp-plumber": "^1.1.0",
+    "gulp-sass": "^2.3.2",
+    "gulp-sourcemaps": "^2.2.0",
+    "gulp-uglify": "^2.0.0",
+    "gulp-util": "^3.0.7",
+    "jshint": "^2.9.4",
+    "jshint-stylish": "^2.2.1"
   },
   "author": "Jan den Besten",
   "license": "ISC"
