Busy with vue-grid
Former-commit-id: e65f907cd52b75312286544ec9a6d317ae2240c7
Former-commit-id: b5ec84560d5d9bf8096e784c1487e5dee384eeb1
Former-commit-id: a615f7b7285d8ed928a93f00405fba5339ecfda8 [formerly 5119e010f1b10f912358be6e7247e29fd919dd2d]
Former-commit-id: 79e0a38bf8150fab09613546868fba484e480e33

--- a/sys/package.json
+++ b/sys/package.json
@@ -22,5 +22,8 @@
     "jshint-stylish": "^2.2.1"
   },
   "author": "Jan den Besten",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "lodash": "^4.16.6"
+  }
 }
