--- a/sys/package.json
+++ b/sys/package.json
@@ -17,6 +17,7 @@
     "css-loader": "^0.25.0",
     "eslint": "^3.9.1",
     "eslint-loader": "^1.6.1",
+    "extract-text-webpack-plugin": "^2.0.0-beta",
     "file-loader": "^0.9.0",
     "node-sass": "^3.10.1",
     "sass-loader": "^4.0.2",
