Webpack with Livereload
Former-commit-id: 4a9905ef0cbd0b2355a67faa16e18279e6b02628
Former-commit-id: c88d91dc046f87cbeb34e5ad56a936574a0e9818
Former-commit-id: dadec52c5eda60d51f7e052d042195a24868e3c4 [formerly c02e57b120134cecaf1e9790364360cebf341e12]
Former-commit-id: ac02922a72b39f516e4f419b406f56e188ad73d4

--- a/sys/package.json
+++ b/sys/package.json
@@ -6,6 +6,15 @@
   "license": "ISC",
   "private": true,
   "main": "index.php",
+  "eslintConfig": {
+    "parserOptions": {
+      "ecmaVersion": 6,
+      "sourceType": "module"
+    },
+    "plugins": [
+      "html"
+    ]
+  },
   "dependencies": {
     "vue": "^2.0.1"
   },
@@ -23,6 +32,7 @@
     "sass-loader": "^4.0.2",
     "vue-loader": "^9.7.0",
     "webpack": "^2.1.0-beta.25",
-    "webpack-dev-server": "^2.1.0-beta.0"
+    "webpack-dev-server": "^2.1.0-beta.0",
+    "webpack-livereload-plugin": "^0.9.0"
   }
 }
