--- a/sys/package.json
+++ b/sys/package.json
@@ -16,7 +16,8 @@
     ]
   },
   "dependencies": {
-    "vue": "^2.0.1"
+    "vue": "^2.0.1",
+    "bootstrap": "^4.0.0-alpha.5"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
