--- a/sys/package.json
+++ b/sys/package.json
@@ -32,6 +32,7 @@
     "eslint-loader": "^1.6.1",
     "extract-text-webpack-plugin": "^2.0.0-beta",
     "file-loader": "^0.9.0",
+    "image-webpack-loader": "^3.0.0",
     "node-sass": "^3.10.1",
     "sass-loader": "^4.0.2",
     "vue-loader": "^9.7.0",
