Global Vue methods for calling API
Former-commit-id: d21f85870de1a396a18786558d709057db91dab5
Former-commit-id: 54a70533128c2748903c197de24d4076d577402c
Former-commit-id: f043d2f7447d5a19849313c1d3d8678bef5f7385 [formerly 8bb17a432bc506c4437d9e379081436dc7d151d0]
Former-commit-id: cafc8f9e481f5c6edbfac37cc5c8ec108fd2aefa

--- a/sys/package.json
+++ b/sys/package.json
@@ -16,8 +16,9 @@
     ]
   },
   "dependencies": {
-    "vue": "^2.0.1",
-    "bootstrap": "^4.0.0-alpha.5"
+    "axios": "^0.15.2",
+    "bootstrap": "^4.0.0-alpha.5",
+    "vue": "^2.0.1"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
@@ -26,7 +27,7 @@
     "css-loader": "^0.25.0",
     "eslint": "^3.9.1",
     "eslint-loader": "^1.6.1",
-   "extract-text-webpack-plugin": "^2.0.0-beta",
+    "extract-text-webpack-plugin": "^2.0.0-beta",
     "file-loader": "^0.9.0",
     "node-sass": "^3.10.1",
     "sass-loader": "^4.0.2",
