--- a/sys/package.json
+++ b/sys/package.json
@@ -18,7 +18,8 @@
   "dependencies": {
     "axios": "^0.15.2",
     "bootstrap": "^4.0.0-alpha.5",
-    "vue": "^2.0.1"
+    "vue": "^2.0.1",
+    "vue-lang": "^0.2.5"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
