--- a/sys/package.json
+++ b/sys/package.json
@@ -19,7 +19,8 @@
     "axios": "^0.15.2",
     "bootstrap": "^4.0.0-alpha.5",
     "vue": "^2.0.1",
-    "vue-lang": "^0.2.5"
+    "vue-lang": "^0.2.5",
+    "vuedraggable": "^2.3.1"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
