--- a/sys/package.json
+++ b/sys/package.json
@@ -34,7 +34,7 @@
     "node-sass": "^3.10.1",
     "sass-loader": "^4.0.2",
     "vue-loader": "^9.7.0",
-    "webpack": "^2.1.0-beta.25",
+    "webpack": "2.1.0-beta.25",
     "webpack-dev-server": "^2.1.0-beta.0",
     "webpack-livereload-plugin": "^0.9.0"
   }
