--- a/sys/package.json
+++ b/sys/package.json
@@ -22,6 +22,7 @@
     "tinymce": "^4.5.1",
     "vue": "^2.0.1",
     "vue-lang": "^0.2.5",
+    "vue-tinymce": "^1.0.4",
     "vuedraggable": "^2.3.1"
   },
   "devDependencies": {
