Media & Lists working
Former-commit-id: e614b0121a52f3a280671f73be5dd32d5eae6ab5

--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,9 @@ bower_components/*
 node_modules/*
 sys/bower_components/*
 sys/node_modules/*
+/sys/build.txt
 site/cache/log*.php
 site/stats/*.xml
 site/cache/data_settings_*
-/sys/build.txt
 site/cache/data_result_*
+site/assets/**/*.*
