--- a/sys/package.json
+++ b/sys/package.json
@@ -1,6 +1,6 @@
 {
   "name": "FlexyAdmin",
-  "version": "3.5.0-alpha_5",
+  "version": "3.5.0-alpha5",
   "description": "== FLEXYADMIN == (c) Jan den Besten www.flexyadmin.com",
   "author": "Jan den Besen",
   "license": "ISC",
