--- a/sys/package.json
+++ b/sys/package.json
@@ -1,11 +1,16 @@
 {
   "name": "FlexyAdmin",
-  "version": "3.5.0_alpha_7",
+  "version": "3.5.0-alpha.7",
   "description": "== FLEXYADMIN == (c) Jan den Besten www.flexyadmin.com",
   "author": "Jan den Besen",
   "license": "ISC",
   "private": true,
   "main": "index.php",
+  "scripts": {
+    "watch"   : "NODE_ENV=watch webpack --progress --watch",
+    "develop" : "NODE_ENV=develop webpack --progress",
+    "build"   : "NODE_ENV=production webpack --progress"
+  },
   "eslintConfig": {
     "parserOptions": {
       "ecmaVersion": 6,
