--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lodash": "^4.3.0"
   },
   "devDependencies": {
-    "gulp": "^3.8",
+    "gulp": "^3.9.1",
     "gulp-cached": "^1.1",
     "gulp-concat": "^2.4",
     "gulp-cssnano": "^2.1.0",
@@ -21,10 +21,11 @@
     "gulp-less": "^1.3",
     "gulp-livereload": "^2.1",
     "gulp-notify": "^2.0",
-    "gulp-phpunit": "^0.8",
+    "gulp-phpunit": "^0.8.4",
     "gulp-pixrem": "^0.1",
     "gulp-plumber": "^0.6",
     "gulp-remember": "^0.3",
+    "gulp-sourcemap": "^1.0.1",
     "gulp-sourcemaps": "^1.2",
     "gulp-uglify": "^1.0",
     "gulp-util": "^3.0",
