--- a/sys/package.json
+++ b/sys/package.json
@@ -28,8 +28,7 @@
     "vue": "^2.0.1",
     "vue-lang": "^0.2.5",
     "vue-tinymce": "^1.0.4",
-    "vuedraggable": "^2.3.1",
-    "wovue-dialog": "^1.2.1"
+    "vuedraggable": "^2.3.1"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
@@ -43,8 +42,8 @@
     "node-sass": "^3.10.1",
     "sass-loader": "^4.0.2",
     "vue-loader": "^9.9.5",
-    "webpack": "2.1.0-beta.25",
-    "webpack-dev-server": "^2.1.0-beta.0",
+    "webpack": "^2.1",
+    "webpack-dev-server": "^2.1",
     "webpack-livereload-plugin": "^0.9.0"
   }
 }
