--- a/sys/package.json
+++ b/sys/package.json
@@ -1,15 +1,15 @@
 {
   "name": "FlexyAdmin",
-  "version": "3.5.0-beta.13",
+  "version": "3.5.0-beta.14",
   "description": "== FLEXYADMIN == (c) Jan den Besten www.flexyadmin.com",
   "author": "Jan den Besen",
   "license": "ISC",
   "private": true,
   "main": "index.php",
   "scripts": {
-    "watch"   : "NODE_ENV=watch webpack --progress --watch",
-    "develop" : "NODE_ENV=develop webpack --progress",
-    "build"   : "NODE_ENV=production webpack --progress"
+    "watch": "NODE_ENV=watch webpack --progress --watch",
+    "develop": "NODE_ENV=develop webpack --progress",
+    "build": "NODE_ENV=production webpack --progress"
   },
   "eslintConfig": {
     "parserOptions": {
@@ -27,6 +27,7 @@
     "tinymce": "^4.5.1",
     "vue": "^2.0.1",
     "vue-lang": "^0.2.5",
+    "vue-template-compiler": "^2.3.0",
     "vue-tinymce": "^1.0.4",
     "vuedraggable": "^2.3.1"
   },
@@ -41,7 +42,7 @@
     "file-loader": "^0.9.0",
     "node-sass": "^3.10.1",
     "sass-loader": "^4.0.2",
-    "vue-loader": "^9.9.5",
+    "vue-loader": "^10.0.0",
     "webpack": "^2.1",
     "webpack-dev-server": "^2.1",
     "webpack-livereload-plugin": "^0.9.0"
