--- a/sys/package.json
+++ b/sys/package.json
@@ -7,8 +7,8 @@
   "private": true,
   "main": "index.php",
   "scripts": {
-    "watch": "NODE_ENV=watch webpack --progress --watch",
-    "develop": "NODE_ENV=develop webpack --progress",
+    "watch": "NODE_ENV=watch webpack --devtool eval --progress --watch",
+    "develop": "NODE_ENV=develop webpack --devtool eval --progress",
     "build": "NODE_ENV=production webpack --progress"
   },
   "eslintConfig": {
